--- a/hugo_site/hugo.yaml
+++ b/hugo_site/hugo.yaml
@@ -62,20 +62,26 @@ menu:
     - name: Rulebook
       weight: 1
       pageRef: /docs
-    - name: Resources
+    - name: Character generator
       weight: 2
-      pageRef: /res
-    - name: Search
+      pageRef: /res/character_generator
+    - name: Resources
       weight: 3
+      pageRef: /res
+    - name: Itch.io
+      weight: 4
+      url: https://galileo-alighieri.itch.io/murdham
+    - name: Search
+      weight: 10
       params:
         type: search
     - name: Discord
-      weight: 4
+      weight: 20
       url: https://discord.gg/TcSSPBYD
       params:
         icon: discord
     - name: GitHub
-      weight: 5
+      weight: 21
       url: https://github.com/GalileoAlighieri/murdham
       params:
         icon: github
