--- a/software_tools/Cargo.toml
+++ b/software_tools/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = [ "asciidoc", "character", "gen_character", "gen_rules", "profiles"]
+members = [ "asciidoc", "character", "gen_character", "gen_js_data", "gen_rules", "profiles"]
